--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="//at.alicdn.com/t/font_2253020_4r3h8dncc5d.js"></script>
-  <title>Vite App</title>
+  <title>无名UI框架</title>
 </head>
 <body>
 <div id="app"></div>
